--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,12 @@
   "name": "sdal",
   "version": "1.1",
   "authors": [
+    "Agustín Gravano <digital@bl.fcen.uba.ar>"
+    "Matías G Dell’Amerlina Ríos"
     "Alberto Barradas <abcsds@gmail.com>"
   ],
   "description": "Affective dictionary of 25000 words in Spanish formatted in JSON",
-  "main": "index.js",
+  "main": "sdal.json",
   "keywords": [
     "sentiment",
     "Spanish",
