Update npm name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sdal",
+  "name": "spanishdal",
   "version": "0.1.0",
   "description": "Affective dictionary of 25000 words in Spanish formatted in JSON",
   "author": "Alberto Barradas <abcsds@gmail.com>",
